--- a/_posts/2014-05-30-rabbitmq-1.md
+++ b/_posts/2014-05-30-rabbitmq-1.md
@@ -54,6 +54,9 @@ RabbitMQ文档中的一些总结
 
 ###  一个高吞吐量的RabbitMQ架构
 
+![rabbitmq-arch]({{ IMAGE_PATH }}/rabbitmq-arch.png)
+
+
 *   四台机器构成一个集群，集群每台机器上的exchange，binding，等meta信息都是一样的
 *   为了实现load *   balance，创建一个类型为random的exchange，名字叫做sec-ex。它会随机的将消息发送到绑定到它上面的queue上（其实是随机发送到routingKey相同的queue上，只要绑定到时候，r*   outingKey相同，那么queue得到消息的几率就是一样的）
 *   在四台机器上创建四个queue，绑定到sec-ex，routingKey相同，确保每个queue得到的消息是平均的
